# ksi-tool

./: .gitattributes  .gitignore  CONTRIBUTING.md  GNUmakefile.am  README  README.md  VERSION  WinBuild.bat  WinBuild.bat.sample  WinBuild.txt  WinBuildOnline.bat  configure.ac  makefile  makefile.vc  mkversion.sh  rebuild-deb.sh  rebuild-mac-static-installer.sh  rebuild-rpm.sh  rebuild-static-deb.sh  rebuild-static-rpm.sh  rebuild-static.sh  rebuild-tool-dependencies.bat  rebuild-tool-dependencies.sh  rebuild.sh  static-build.howto
doc/: ChangeLog  ksi-conf.5  ksi-extend.1  ksi-pubfile.1  ksi-sign.1  ksi-verify.1  ksi.1  ksitool.1
installers/: ksitool.wxs  license.rtf
lib/: libksiapiMT.lib  libksiapiMTd.lib
mac_static_content/Resources/: license.txt
packaging/deb/: control.in  rebuild_changelog.sh  rules.in
packaging/redhat/: ksi.spec.in  ksitool.spec  ksitool.spec.in
packaging/win/: ksi.wxs  ksitool.wxs  license.rtf  makefile
redhat/: gtime.spec  gtime.spec.in  ksitool.spec  ksitool.spec.in
src/: GNUmakefile.am  api_wrapper.c  api_wrapper.h  common.h  component.c  component.h  conf.c  conf.h  conf_file.c  conf_file.h  debug_print.c  debug_print.h  err_trckr.c  err_trckr.h  getopt.c  getopt.h  gt_cmd_common.h  gt_cmd_control.c  gt_cmd_control.h  gt_cmd_parameters.c  gt_cmd_parameters.h  gt_cmdcommon.h  gt_cmdparameters.c  gt_cmdparameters.h  gt_task.c  gt_task.h  gt_task_extend.c  gt_task_getpubfile.c  gt_task_other.c  gt_task_pubfile.c  gt_task_sign.c  gt_task_support.c  gt_task_support.h  gt_task_verify.c  gtime.c  ksitool.c  ksitool_err.c  ksitool_err.h  main.c  makefile  (+15 more)
src/ParamSet/: ParamValue.c  ParamValue.h  Parameter.c  Parameter.h  param_set.c  param_set.h  param_set_obj_impl.h  param_value.c  param_value.h  parameter.c  parameter.h  types.h
src/param_set/: internal.h  makefile  param_set.c  param_set.h  param_set_obj_impl.h  param_value.c  param_value.h  parameter.c  parameter.h  paramset.def  strn.c  strn.h  task_def.c  task_def.h
src/tool_box/: component.c  component.h  conf.c  default_tasks.h  err_trckr.c  err_trckr.h  extend.c  ksi_init.c  ksi_init.h  makefile  param_control.c  param_control.h  pubfile.c  sign.c  smart_file.c  smart_file.h  task_initializer.c  task_initializer.h  tool_box.c  tool_box.h  verify.c
test/: README.md  TEST-README  TEST-README.md  conf1  conf2  conf3  construct_conf_file.sh  convert-to-memory-test.bat  convert-to-memory-test.sh  delete-stderr-check.sed  endpoints.sh  memory-test.bat  memory-test.sh  pubfile  rename-output.sed  replace-with-dr-memory.sed  replace-with-valgrind.sed  run-tests-extended.sh  run-tests.sh  tap-functions  test.cfg.sample  test.sh  unix_test.sh  verify-test_ok-sig-2014-08-01.1-extend_response-2015-09-15.cfg  verify-test_ok-sig-2014-08-01.1-extend_response-head.cfg  verify-test_ok-sig-2014-08-01.1-extend_response.cfg  win_test.bat  win_test_failures.bat  windows-test.bat
test/resource/: TestData.txt.gtts1  TestData.txt.gtts2  conf1  conf2  conf3  data_sh256.txt  invalid_signature_len.ksig  invalid_signature_value.ksig  nok_pubfile  ripemd160.ksig  sha224.ksig  sha256.ksig  sha384.ksig  sha512.ksig
test/resource/certificates/: ok-test.crt
test/resource/conf/: default-conf.cfg  default-not-working-conf.cfg  nok-conf-flags-valid-on-cmd-inside-conf-1.cfg  nok-conf-flags-valid-on-cmd-inside-conf-2.cfg  nok-conf-flags-valid-on-cmd-inside-conf-3.cfg  nok-conf-forbidden-flags.cfg  nok-conf-syntax-error.cfg  nok-conf-typos.cfg  nok-conf-unknown-flags.cfg  nok-verification-info.cfg  ok-conf-1.cfg  ok-verification-info.cfg  static-extend-legacy.cfg  static-pubfile.cfg  static-sign-1.cfg  static-sign-2.cfg  static-sign-3.cfg  static-sign-4.hmac-sha512.cfg  static-sign-legacy.cfg  static-sign-metadata-1.cfg  verify-conf.cfg  verify-test_ok-sig-2014-08-01.1-extend_response-2015-09-15.cfg  verify-test_ok-sig-2014-08-01.1-extend_response-head.cfg  verify-test_ok-sig-2014-08-01.1-extend_response-req_id_2.cfg  verify-test_ok-sig-2014-08-01.1-extend_response.cfg  verify-test_ok-sig-2014-08-01.1-multi-extend_response-head-wrong_ver_req_id.cfg  verify-test_ok-sig-2014-08-01.1-multi-extend_response-head.cfg  verify-test_ok-sig-2014-08-01.1-multi-extend_response.cfg  verify-test_ok-sig-2015-09-13.extend_response.cfg  verify-test_ok_sig-imprint_sha256-extend_response-err_107.tlv.cfg
test/resource/file/: -  --odd-file  abcx  ebcd  file_max_tlv_size  file_max_tlv_size_p1
test/resource/ok-signatures/: ok-sig-2014-08-01.1.ext.ksig
test/resource/server/: nok_aggr_response-1.tlv  nok_aggr_response-invalid-aggr-chain.tlv  nok_aggr_response_bad_tag.tlv  nok_aggr_response_missing_header.tlv  ok-aggr-response-2016-05-23-tlv  ok-aggr-response-2017-07-17.tlv  ok-aggr-response-pdu_v1.tlv  ok-ext-err-resp-101.tlv  ok-ext-err-resp-103.tlv  ok-ext-err-resp-104.tlv  ok-ext-err-resp-105.tlv  ok-ext-err-resp-106.tlv  ok-ext-err-resp-107.tlv  ok-ext-err-resp-200.tlv  ok-ext-err-resp-201.tlv  ok-ext-err-resp-202.tlv  ok-ext-err-resp-300.tlv  ok-ext-err-resp-301.tlv  ok-extend-request-2016-01-01.tlv  ok-sig-2014-08-01.1-extend_response-2015-09-15.tlv  ok-sig-2014-08-01.1-extend_response-2015-09-15.txt  ok-sig-2014-08-01.1-extend_response-head.tlv  ok-sig-2014-08-01.1-extend_response-head.txt  ok-sig-2014-08-01.1-extend_response-hmac_sha512.tlv  ok-sig-2014-08-01.1-extend_response-pdu_v1.tlv  (+18 more)
test/test_suites/: cmd.test  default-conf.test  embedded-url.test  extend-cmd.test  extend-verify.test  extend.test  file-name-gen.test  invalid-conf.test  linux-pipe.test  mass-extend.test  pipe.test  pubfile.test  sign-block-signer-cmd.test  sign-block-signer.test  sign-cmd.test  sign-masking.test  sign-metadata.test  sign-verify.test  sign.test  signature-dump.test  static-extend.test  static-pubfile.test  static-sign-verify.test  static-sign.test  static-verify-invalid-signatures.test  static-verify.test  tlvutil-metadata.test  tlvutil-pdu-header.test  tlvutil-sign-masking.test  verify-cmd.test  verify-invalid-pubfile.test  verify-pub-suggestions.test  verify-result.test  verify.test  win-pipe.test
(+11 files in other folders)
